# ServoLink

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/adr/: 0001-use-local-appdata-for-storage.md  0002-newton-raphson-vs-analytic.md  0003-baseangle-and-position-annotations.md
docs/ai-memory/: current-status.md  next-steps.md  project-context.md  project-retrospective.md
docs/architecture/: architecture-overview.md  kinematics-theory.md
docs/debug-log/: 2026-05-20-intellisense-vs-compiler.md  INDEX.md  TEMPLATE.md
docs/devlog/: 2026-05-20-foundation-to-v05.md  2026-05-20-project-init.md  2026-05-21-feature-batch.md
docs/product/: roadmap.md  status.md  vision.md
scripts/: check-toolchain.ps1  dev-shell.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  KinematicSolver.cpp  KinematicSolver.h  LinkageAnalysis.h  LinkageParams.h  MechanismState.h  OperationResult.h  ParameterOptimizer.cpp  ParameterOptimizer.h  TransmissionAnalyzer.cpp  TransmissionAnalyzer.h  UnitSystem.h
src/storage/: CMakeLists.txt  IStorageBackend.h  JsonStorageBackend.cpp  JsonStorageBackend.h  ProjectFile.h
src/ui/: CMakeLists.txt  CurvePlot.cpp  CurvePlot.h  KinematicsView.cpp  KinematicsView.h  MainWindow.cpp  MainWindow.h  OptimizeDialog.cpp  OptimizeDialog.h  ReverseDialog.cpp  ReverseDialog.h  StyleConstants.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  tst_kinematic_solver.cpp  tst_parameter_optimizer.cpp  tst_transmission_analyzer.cpp
training/: CMakeLists.txt  task.h
